server/compilers/goLiteJS/src/test/ml1/valid/cont1.go
// continue support
package main

func main() {
    for {
        continue
    }

    for x < 10 {
        continue
    }

    for i := 0; i < 10; i++ {
        continue
    }
}
