server/compilers/goLiteJS/src/test/ml1/invalid/array2.go
// parentheses for indexing
package main

var x [3]int

func main() {
x(0) = 1
}
